         support.
20110610 peripherals/spectranet.c: remember to restore Spectranet disabled
         state when restoring from snapshot (thanks, Guesser).
20110611 peripherals/spectranet.[ch],z80/{coretest.c,z80_ops.c}: implement
         Spectranet programmable trap support.
20110611 peripherals/spectranet.c: implement the shadow screen bit when reading
         from port 0x033b.
20110611 peripherals/nic/w5100.c: very slightly less stubby W5100
         implementation.
20110611 peripherals/spectranet.c: remember to set paged state in snapshot!
20110613 peripherals/flash/am29f010.c: ensure flash locations > 64Kb can be
         written to.
20110613 memory.c,peripherals/{nic/w5100.c,spectranet.[ch]}: even less stubby
         W5100 emulation.
20110615 peripherals/nic/w5100.c: Spectranet can now make a DNS query!
20110616 peripherals/nic/w5100.c: stop potential deadlock when freeing W5100.
20110616 peripherals/nic/w5100.c: ensure we don't read more bytes than are free
         in our rx buffer.
20110617 peripherals/nic/{Makefile.am,w5100.c,w5100_internals.h,
         w5100_socket.c}: split W5100 socket code out into a separate file.
20110617 peripherals/nic/w5100_socket.c: don't process closed sockets (thanks,
         Winston).
20110617 peripherals/nic/{w5100_internals.h,w5100_socket.c}: detecting fd
         changes around the select() call could miss the case of a socket being
         closed and re-opened with the same fd, so move to explicit
         invalidation instead.
20110617 peripherals/nic/w5100_socket.c: socket->old_rx_rd is updated by RECV
         command, not by new data becoming available. It should be initialised,
         though.
20110617 peripherals/nic/w5100_socket.c: don't read from sockets that have no
         buffer space left to put the data into.
20110618 peripherals/nic/w5100_socket.c: ensure data is read into the correct
         space in the case of multiple reads.