@@ -3732,3 +3732,5 @@
          buffer space left to put the data into.
 20110618 peripherals/nic/w5100_socket.c: ensure data is read into the correct
          space in the case of multiple reads.
+20110618 peripherals/nic/w5100_socket.c: ensure that socket->fd is initialised
+         so we don't try and close() uninitialised values (thanks, valgrind).
